--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "esdoc-standard-plugin": "^1.0.0"
   },
   "dependencies": {
-    "deep-freeze": "^0.0.1"
+    "deep-freeze": "^0.0.1",
+    "lodash.merge": "^4.6.0"
   }
 }
